src/objects/CrossCuttingUtilityData__mdt.object
<CustomObject>
    <description>Our CrossCutting Utility Data</description>
    <fields>
        <fullName>LogLevelForCCC__c</fullName>
        <defaultValue>&apos;None&apos;</defaultValue>
        <description>The loglevel used when printing out in testmode. This will override users setting</description>
        <inlineHelpText>The loglevel used when printing out in test mode</inlineHelpText>
        <label>LogLevel For TestRunning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debug</fullName>
                    <default>true</default>
                    <label>Debug</label>
                </value>
                <value>
                    <fullName>Fine</fullName>
                </value>
                <value>
                    <fullName>Finer</fullName>
                </value>
                <value>
                    <fullName>Finest</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShowCCDebugInfo__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show the Cross Cutting Debug Information in the logs</description>
        <inlineHelpText>Show the Cross Cutting Debug Information in the logs</inlineHelpText>
        <label>Show CC Debug Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseCachingStrategy__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use the caching strategy. This value is checked in the default ctor of &apos;accc_ApexCacheMgr&apos;</description>
        <inlineHelpText>Use the caching strategy. This value is checked in the default ctor of &apos;accc_ApexCacheMgr&apos;</inlineHelpText>
        <label>Use Caching Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>environmentClass__c</fullName>
        <description>test environment class</description>
        <inlineHelpText>test environment class</inlineHelpText>
        <label>environmentClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maxNumberOfItemsInChunks__c</fullName>
        <description>number of items in a chunk</description>
        <inlineHelpText>number of items in a chunk</inlineHelpText>
        <label>maxNumberOfItemsInChunks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>softAssert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>use soft assertion</description>
        <inlineHelpText>use soft assertion</inlineHelpText>
        <label>softAssert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>triggersEnable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>are the triggers enable</description>
        <inlineHelpText>are the triggers enable</inlineHelpText>
        <label>triggersEnable</label>
        <type>Checkbox</type>
    </fields>
    <label>CrossCuttingUtilityData</label>
    <pluralLabel>CrossCuttingUtilityDatas</pluralLabel>
</CustomObject>